<resources>
    <string name="app_name">homework3</string>
    <string name="attractions">Attractions</string>
    <string name="image_1">Image 1</string>
    <string name="dining">Dining</string>
    <string name="education">Education</string>
    <string name="family">Family</string>
    <string name="health">Health</string>
    <string name="office">Office</string>
    <string name="promotions">Promotions</string>
    <string name="radio">Radio</string>
    <string name="text">Text</string>
    <string name="make_photo">Photo</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="inventory">Inventory</string>
    <string name="weight">Weight</string>
    <string name="sing_in">Sing in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="just_sign_in">*Just sign in</string>
    <string name="android">Android</string>
    <string name="avatar">Avatar</string>
    <string name="no_data">\?</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="call">Call</string>
    <string name="directions">DIRECTIONS</string>
    <string name="save">SAVE</string>
    <string name="website">WEBSITE</string>
    <string name="certificated">Certificated</string>
    <string name="rss">rss</string>
    <string name="star">star</string>
    <string name="write_smt">write smt</string>
    <string name="view">View</string>
    <string name="layouts">Layouts</string>
</resources>