<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingTop="80dp"
        android:paddingEnd="40dp"
        android:paddingBottom="20dp"
        android:text="@string/sing_in"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/setEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInTextView"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/email"
        android:background="@drawable/ic_bg_edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="25dp"
        android:paddingBottom="5dp"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/setPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setEmail"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:autofillHints="@string/password"
        android:background="@drawable/ic_bg_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="25dp"
        android:paddingBottom="5dp"
        android:textSize="40sp" />

    <CheckBox
        android:id="@+id/rememberCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setPassword"
        android:layout_marginStart="20dp"
        android:checked="true"
        android:text="@string/remember"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rememberCheckBox"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/ic_button_sign_in"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:text="@string/just_sign_in"
        android:textSize="20sp" />

</RelativeLayout>