<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/image_1"
                android:padding="20dp"
                android:src="@drawable/ic_baseline_looks_one_24" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/attractions"
                android:textSize="25sp" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/dining"
                android:padding="20dp"
                android:src="@drawable/ic_baseline_looks_two_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/dining"
                android:textSize="25sp" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/education"
                android:padding="20dp"
                android:src="@drawable/ic_baseline_looks_3_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/education"
                android:textSize="25sp" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/family"
                android:padding="20dp"
                android:src="@drawable/ic_baseline_looks_4_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/family"
                android:textSize="25sp" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/health"
                android:padding="20dp"
                android:src="@drawable/ic_baseline_looks_5_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/health"
                android:textSize="25sp" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/office"
                android:padding="20dp"
                android:src="@drawable/ic_baseline_looks_6_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/office"
                android:textSize="25sp" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/promotions"
                android:padding="20dp"
                android:src="@drawable/ic_baseline_chat_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/promotions"
                android:textSize="25sp" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/radio"
                android:padding="20dp"
                android:src="@drawable/ic_baseline_sports_handball_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/radio"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>

</ScrollView>