<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewSecondPlusRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:padding="40dp"
        android:text="@string/make_photo"
        android:textSize="90sp" />

    <Button
        android:id="@+id/buttonMakePhotoSecondPlusRelative"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/textViewSecondPlusRelative"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_baseline_camera_24" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonMakePhotoSecondPlusRelative"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="@string/title"
        android:hint="@string/title"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTitle"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="Price"
        android:hint="@string/price"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@+id/editTextPrice"
        android:autofillHints="Location"
        android:drawableEnd="@drawable/ic_baseline_add_location_alt_24"
        android:hint="@string/location"
        android:inputType="text" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLocation"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="Description"
        android:hint="@string/description"
        android:inputType="text" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:autofillHints="@string/inventory"
        android:hint="@string/inventory"
        android:inputType="text" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="@string/weight"
        android:hint="@string/weight"
        android:inputType="text" />

</RelativeLayout>