<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewSecondPlusConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:padding="40dp"
        android:text="@string/make_photo"
        android:textSize="90sp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMakePhotoSecondPlusConstraint"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_baseline_camera_24"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSecondPlusConstraint"
        app:layout_constraintEnd_toEndOf="@+id/textViewSecondPlusConstraint" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="@string/title"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/textViewSecondPlusConstraint" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="Price"
        android:hint="@string/price"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle" />

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="Location"
        android:drawableEnd="@drawable/ic_baseline_add_location_alt_24"
        android:hint="@string/location"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextPrice"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="Description"
        android:hint="@string/description"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextLocation" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:autofillHints="@string/inventory"
        android:hint="@string/inventory"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:autofillHints="@string/weight"
        android:hint="@string/weight"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

</androidx.constraintlayout.widget.ConstraintLayout>