<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/android"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/avatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom">

                <TextView
                    android:id="@+id/posts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/no_data" />

                <TextView
                    android:id="@+id/followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/no_data" />

                <TextView
                    android:id="@+id/following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/no_data" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/posts" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/followers" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/following" />
            </TableRow>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/username" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/address" />

    <TextView
        android:id="@+id/profile_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/description" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Получилось корректно растянуть шесть вью только через вес,
         иначе на превью отображались шесть, а на моём устройстве одна
         вью уходила за рамки лэйаута-->

        <ImageView
            android:id="@+id/image1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/no_data" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/no_data" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/no_data" />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/no_data" />

        <ImageView
            android:id="@+id/image5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/no_data" />

        <ImageView
            android:id="@+id/image6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/no_data" />
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp">

        <Button
            android:id="@+id/directions"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTintMode="add"
            android:drawableTop="@drawable/ic_baseline_directions_24"
            android:drawableTint="@android:color/holo_blue_bright"
            android:text="@string/directions"
            android:textColor="@android:color/holo_blue_light"
            tools:targetApi="m" />

        <Button
            android:id="@+id/call"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTintMode="add"
            android:drawableTop="@drawable/ic_baseline_local_phone_24"
            android:drawableTint="@android:color/holo_blue_bright"
            android:text="@string/call"
            android:textColor="@android:color/holo_blue_light"
            tools:targetApi="m" />

        <Button
            android:id="@+id/save"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTintMode="add"
            android:drawableTop="@drawable/ic_baseline_star_24"
            android:drawableTint="@android:color/holo_blue_bright"
            android:text="@string/save"
            android:textColor="@android:color/holo_blue_light"
            tools:targetApi="m" />

        <Button
            android:id="@+id/website"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTintMode="add"
            android:drawableTop="@drawable/ic_baseline_insert_link_24"
            android:drawableTint="@android:color/holo_blue_bright"
            android:text="@string/website"
            android:textColor="@android:color/holo_blue_light"
            tools:targetApi="m" />

    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="35dp"
        android:background="@android:color/darker_gray" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/bottom_image1"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/no_data" />

        <ImageView
            android:id="@+id/bottom_image2"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/no_data" />

        <ImageView
            android:id="@+id/bottom_image3"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/no_data" />
    </TableRow>

</LinearLayout>